# rokhdad.top

./: .aiexclude  .env.example  .geminiignore  .gitignore  .server-credentials  AGENTS.md  AGGREGATION_SETUP.md  CLAUDE.md  DEPLOY.md  FINAL_SUMMARY.md  GEMINI.md  README.md  SECURITY_HARDENING.md  TASKS_COMPLETED.md  collect_evand.command  deploy-final.sh  deploy.sh  server-info.md
backend/: .env.example  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  composer.json
deploy/: AGENTS.md  CLAUDE.md  (+9 more)
workers/: AGENTS.md  CLAUDE.md  GEMINI.md  pyproject.toml
workers/rokhdad_workers/: __init__.py  cli.py  deduplication.py  enrichment.py  field_history.py  graphiti_cli.py  graphiti_client.py  images.py  ingestion.py  logging.py  normalization.py  queue.py  settings.py  snapshots.py
workers/rokhdad_workers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
workers/rokhdad_workers/normalizers/: __init__.py  eseminar.py  evand.py
workers/rokhdad_workers/sources/: __init__.py  bilitmaster.py  eseminar.py  evand.py
workers/tests/: test_deduplication.py  test_enrichment_job.py  test_eseminar_collector.py  test_eseminar_normalizer.py  test_evand_collector.py  test_evand_normalizer.py  test_field_history.py  test_graphiti.py  test_image_download_worker.py  test_image_moderation_metadata.py  test_image_variants.py  test_logging.py  test_normalization_schema.py  test_queue_consumer.py  test_snapshot_store.py  test_worker_smoke.py
workers/tests/fixtures/: enrichment_job.json  eseminar_events.json  evand_events.json  image_download_job.json  normalized_duplicates.json
(+459 files in other folders)
